# scribe

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  deploy.sh  dev.sh  docker-compose.yml  package.json  pnpm-lock.yaml
.claude-plugin/: marketplace.json  plugin.json
agents/: scout.md
apps/web/: Dockerfile  (+2 more)
commands/: draft.md  learn.md  review.md  scan.md
services/backend/: Dockerfile  Makefile  init.sql  pyproject.toml  pytest.ini
services/backend/app/: __init__.py  config.py  database.py  main.py
services/backend/app/agents/: __init__.py  mock_llm.py  researcher.py  scribe.py  teacher.py
services/backend/app/middleware/: __init__.py  license.py  tenant.py
services/backend/app/models/: __init__.py  base.py  chat.py  paper.py  post.py
services/backend/app/routers/: __init__.py
services/backend/app/routers/public/: __init__.py  blog.py
services/backend/app/routers/v1/: __init__.py  chat.py  papers.py  scribe.py  trends.py
services/backend/app/services/: __init__.py  arxiv_service.py
services/backend/app/services/trends/: __init__.py  aggregator.py  base.py  models.py
services/backend/app/services/trends/sources/: __init__.py  hackernews.py
services/backend/migrations/: 001_add_tenant_id.sql
services/backend/tests/: conftest.py
services/backend/tests/integration/: conftest.py  test_api_sanity.py
services/backend/tests/integration/routers/: test_papers.py
services/backend/tests/unit/services/: test_arxiv_service.py
services/backend/tests/unit/services/trends/: __init__.py  test_aggregator.py  test_hackernews.py
(+67 files in other folders)
