[project]
name = "scribe-backend"
version = "1.0.0"
description = "AI Research Assistant Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "arxiv>=2.0.0",
    "langgraph>=0.0.45",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
